[build-system]
requires = ["poetry>=1.3.2", "poetry-core>=1.4.0", "wheel>=0.38.4", "packaging>=23.0"]
build-backend = "poetry.core.masonry.api"
requires-python = ">=3.7.0"

##############################################################################
#
# IMPORTANT:
# pyproject.toml has several different formats (such as a [project] section);
# however, pip will NOT install unless I base pyproject.toml on the
# [tool.poetry] section below.
#
# Maybe it's my fault, but I have not had success trying to migrate to 
# a [project] section with pip installs.  I have stopped trying because
# the problem is too complicated to continue throwing cycles at making a
# [project] section work with 'pip install ciscoconfparse'.
#
##############################################################################
#[project]

[tool.poetry]
name = "ciscoconfparse"
version = "1.7.16"
description = "Parse, Audit, Query, Build, and Modify Cisco IOS-style and JunOS-style configs"
license = "GPL-3.0-only"
authors = ["Mike Pennington <mike@pennington.net>"]
readme = "README.md"
keywords = ["Parse", "audit", "query", "modify", "Cisco IOS", "Cisco", "NXOS", "ASA", "Juniper"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
]
include = [
    "CHANGES.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "Makefile",
    "README_git_workflow.md"
]
exclude = [
    "coverage.json"
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0.0"
passlib = "^1.7.4"
dnspython = "^2.2.0"
loguru = "0.6.0"
toml = ">=0.10.2"
deprecat = ">=2.1.1"

[tool.poetry.group.dev.dependencies]
wheel = ">=0.8.1"
packaging = ">21.0"
pyroma = ">=4.0"
black = ">=20.8b1"
pre-commit = "2.20.0"
virtualenv = "~=20.16.5"
virtualenvwrapper = "~=4.8.4"
poetry = ">=1.2.2"
poetry-core = ">=1.3.2"
pylint = ">=2.15.5"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1.3"

[tool.poetry.group.docs.dependencies]
Sphinx = "5.2.3"
sphinx-bootstrap-theme = "0.8.1"

[tool.poetry.urls]
source = "https://github.com/mpenning/ciscoconfparse"
homepage = "http://www.pennington.net/py/ciscoconfparse/"
repository = "https://github.com/mpenning/ciscoconfparse"
documentation = "http://www.pennington.net/py/ciscoconfparse/"

